@@ -82,11 +82,11 @@ wpakey_t *wpak, *wpak2;
 
 memset (&hccap, 0, sizeof(hccap_t));
 wpak = (wpakey_t*)(zeiger->eapol +EAPAUTH_SIZE);
-memcpy(hccap.essid, zeiger->essid, 32);
-memcpy(hccap.mac1, zeiger->mac_ap, 6);
-memcpy(hccap.mac2, zeiger->mac_sta, 6);
-memcpy(hccap.nonce1, wpak->nonce, 32);
-memcpy(hccap.nonce2, zeiger->nonce, 32);
+memcpy(&hccap.essid, zeiger->essid, 32);
+memcpy(&hccap.mac1, zeiger->mac_ap, 6);
+memcpy(&hccap.mac2, zeiger->mac_sta, 6);
+memcpy(&hccap.nonce1, wpak->nonce, 32);
+memcpy(&hccap.nonce2, zeiger->nonce, 32);
 
 hccap.eapol_size = zeiger->authlen;
 memcpy(&hccap.eapol, zeiger->eapol, zeiger->authlen);
